@@ -54,7 +54,7 @@ test_clean :
 run_tests : test_clean
 	$(PASSENV) \
 	$(FULLPERL) -I$(INST_ARCHLIB) -I$(INST_LIB) \
-	t/TEST -verbose=$(TEST_VERBOSE) $(TEST_FILES)
+	t/TEST -bugreport -verbose=$(TEST_VERBOSE) $(TEST_FILES)
 
 test :: pure_all run_tests test_clean
 
